--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             Mempelajari seluruh aspek produksi software
             seperti aplikasi web dan aplikasi mobile.
           </p>
-          <a href="#" class="btn btn-danger rounded-pill px-4 mt-3">
+          <a href="jurus.html" class="btn btn-danger rounded-pill px-4 mt-3">
             Detail
           </a>
         </div>
@@ -244,7 +244,7 @@
           Mempelajari seluruh aspek layanan keuangan
           berbasis syariah pada lembaga perbankan dan keuangan.
         </p>
-        <a href="#" class="btn btn-danger rounded-pill px-4 mt-3">
+        <a href="jurus.html" class="btn btn-danger rounded-pill px-4 mt-3">
             Detail
         </a>
       </div>
@@ -273,7 +273,7 @@
             Mempelajari proses pengolahan hasil pertanian
             menjadi produk bernilai ekonomi tinggi.
           </p>
-          <a href="#" class="btn btn-danger rounded-pill px-4 mt-3">
+          <a href="jurus.html" class="btn btn-danger rounded-pill px-4 mt-3">
             Detail
           </a>
         </div>
@@ -291,7 +291,7 @@
           Mempelajari teknik pengolahan dan penyajian
           makanan dan minuman secara profesional.
         </p>
-        <a href="#" class="btn btn-danger rounded-pill px-4 mt-3">
+        <a href="jurus.html" class="btn btn-danger rounded-pill px-4 mt-3">
             Detail
         </a>
       </div>
@@ -319,7 +319,7 @@
             Mempelajari perancangan komunikasi visual
             melalui berbagai media kreatif.
           </p>
-          <a href="#" class="btn btn-danger rounded-pill px-4 mt-3">
+          <a href="jurus.html" class="btn btn-danger rounded-pill px-4 mt-3">
             Detail
           </a>
         </div>
@@ -338,41 +338,39 @@
         <div class="news-category">
           <h5>Kategori Berita</h5>
           <ul>
-            <li><a href="#">Informasi Umum</a></li>
-            <li><a href="#">Prestasi</a></li>
-            <li><a href="#">Agenda Sekolah</a></li>
-            <li><a href="#">Pengumuman Siswa</a></li>
-            <li><a href="#">Pengumuman Pegawai</a></li>
-            <li><a href="#">Pengumuman Orang Tua</a></li>
-            <li><a href="#">Karya Siswa</a></li>
+            <li><a href="beritainfo.html">Informasi Umum</a></li>
+            <li><a href="beritaprestasi.html">Prestasi</a></li>
+            <li><a href="beritagenda.html">Agenda Sekolah</a></li>
+            <li><a href="beritablmada.html">Pengumuman</a></li>
+            <li><a href="beritablmada.html">Karya Siswa</a></li>
           </ul>
         </div>
       </div>
       <div class="col-lg-9">
         <div class="row g-4">
           <div class="col-md-6">
-            <a href="ppdb.html" class="news-card">
-              <img src="asset/berita.webp" alt="">
+            <a href="beritaprestasi.html" class="news-card">
+              <img src="asset/beritaprestasi.webp" alt="">
               <div class="news-overlay">
-                <h6>Rombongan Disdikbud Kunjungi SMKN 2 Mojokerto</h6>
+                <h6>Selamat! Skaneda Raih Prestasi Juara 1 Lomba Kompetensi Siswa...</h6>
+                <span><i class="bi bi-calendar"></i> 03 Maret 2025</span>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="beritainfo.html" class="news-card">
+              <img src="asset/beritainfo.webp" alt="">
+              <div class="news-overlay">
+                <h6>KINI HADIR BANK MINI SYARIAH AKHTARA DI SKANEDA…….YUKS GABUNG !!</h6>
                 <span><i class="bi bi-calendar"></i> 05 Desember 2025</span>
               </div>
             </a>
           </div>
           <div class="col-md-6">
-            <a href="ppdb.html" class="news-card">
-              <img src="asset/berita2.webp" alt="">
-              <div class="news-overlay">
-                <h6>Rombongan Disdikbud Kunjungi SMKN 2 Mojokerto</h6>
-                <span><i class="bi bi-calendar"></i> 05 Desember 2025</span>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-6">
-            <a href="ppdb.html" class="news-card">
+            <a href="beritagenda.html" class="news-card">
               <img src="asset/berita3.webp" alt="">
               <div class="news-overlay">
-                <h6>SMKN 2 Mojokerto Terlibat Pusat Riset AI</h6>
+                <h6>Sosialisasi Genre Goes To School Ciptakan Harmonisasi di kalangan Siswa Di SMK Negeri 2 Mojokerto</h6>
                 <span><i class="bi bi-calendar"></i> 23 November 2025</span>
               </div>
             </a>
